# rvanns-artifact-review

./: CMakeLists.txt  README.md  conanfile.py
cmake/libs/: libfaiss.cmake
include/knowhere/comp/: index_param.h
patches/: mpmi.patch
scripts/: verify_river_artifact.py
src/index/hnsw/: faiss_hnsw.cc  faiss_hnsw_config.h
src/index/refine/: refine_utils.cc
tests/rvanns/: CMakeLists.txt  test_hnsw_224.cpp  test_hnsw_reorder_micro.cpp  test_hnsw_rorder_perf.cpp  test_knowhere_mpmi_rorder.cpp  test_mpmi.cpp  test_mpmi_correctness.cpp  test_mpmi_cq1.cpp  test_mpmi_perf.cpp  test_vec_mpmi_rorder_perf.cpp
